Add basic auth
