# docs/openapi.yml
@@ -8,11 +8,275 @@ servers:
   - url: https://backend.bjoetiek-y.be
 
 paths:
-  /products:
+  /public/categories:
+    get:
+      description: List categories
+      tags: ["Categories"]
+      security: []
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Category"
+
+  /public/categories/{id}:
+    get:
+      description: Get category details
+      tags: ["Categories"]
+      security: []
+      parameters:
+        - name: id
+          in: path
+          description: ID of the category
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Category"
+
+  /admin/categories:
+    get:
+      description: List categories
+      tags: ["Categories"]
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Category"
+
+    post:
+      description: Add category
+      tags: ["Categories"]
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Category"
+        required: true
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Category"
+
+  /admin/categories/{id}:
+    parameters:
+      - name: id
+        in: path
+        description: ID of the category
+        required: true
+        schema:
+          type: string
+          format: uuid
+
+    get:
+      description: Get category details
+      tags: ["Categories"]
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Category"
+
+    put:
+      description: Update category
+      tags: ["Categories"]
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Category"
+        required: true
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Category"
+
+    delete:
+      description: Delete category
+      tags: ["Categories"]
+      responses:
+        "200":
+          description: OK
+
+  /public/manufacturers:
+    get:
+      description: List manufacturers
+      tags: ["Manufacturers"]
+      security: []
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Manufacturer"
+
+  /public/manufacturers/{id}:
+    get:
+      description: Get manufacturer details
+      tags: ["Manufacturers"]
+      security: []
+      parameters:
+        - name: id
+          in: path
+          description: ID of the manufacturer
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Manufacturer"
+
+  /admin/manufacturers:
+    get:
+      description: List manufacturers
+      tags: ["Manufacturers"]
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Manufacturer"
+
+    post:
+      description: Add manufacturer
+      tags: ["Manufacturers"]
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Manufacturer"
+        required: true
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Manufacturer"
+
+  /admin/manufacturers/{id}:
+    parameters:
+      - name: id
+        in: path
+        description: ID of the manufacturer
+        required: true
+        schema:
+          type: string
+          format: uuid
+
+    get:
+      description: Get manufacturer details
+      tags: ["Manufacturers"]
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Manufacturer"
+
+    put:
+      description: Update manufacturer
+      tags: ["Manufacturers"]
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Manufacturer"
+        required: true
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Manufacturer"
+
+    delete:
+      description: Delete manufacturer
+      tags: ["Manufacturers"]
+      responses:
+        "200":
+          description: OK
+
+  /public/products:
     get:
       description: List products
       tags: ["Products"]
       security: []
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Product"
+
+  /public/products/{id}:
+    get:
+      description: Get product details
+      tags: ["Products"]
+      security: []
+      parameters:
+        - name: id
+          in: path
+          description: ID of the product
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: "#/components/schemas/Product"
+                  - type: object
+                    properties:
+                      manufacturer:
+                        $ref: "#/components/schemas/Manufacturer"
+
+  /admin/products:
+    get:
+      description: List products
+      tags: ["Products"]
       responses:
         "200":
           description: OK
@@ -40,7 +304,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Product"
 
-  /products/{id}:
+  /admin/products/{id}:
     parameters:
       - name: id
         in: path
@@ -53,7 +317,6 @@ paths:
     get:
       description: Get product details
       tags: ["Products"]
-      security: []
       responses:
         "200":
           description: OK
@@ -87,162 +350,6 @@ paths:
     delete:
       description: Delete product
       tags: ["Products"]
-      responses:
-        "200":
-          description: OK
-
-  /manufacturers:
-    get:
-      description: List manufacturers
-      tags: ["Manufacturers"]
-      security: []
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/Manufacturer"
-
-    post:
-      description: Add manufacturer
-      tags: ["Manufacturers"]
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Manufacturer"
-        required: true
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Manufacturer"
-
-  /manufacturers/{id}:
-    parameters:
-      - name: id
-        in: path
-        description: ID of the manufacturer
-        required: true
-        schema:
-          type: string
-          format: uuid
-
-    get:
-      description: Get manufacturer details
-      tags: ["Manufacturers"]
-      security: []
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Manufacturer"
-
-    put:
-      description: Update manufacturer
-      tags: ["Manufacturers"]
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Manufacturer"
-        required: true
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Manufacturer"
-
-    delete:
-      description: Delete manufacturer
-      tags: ["Manufacturers"]
-      responses:
-        "200":
-          description: OK
-
-  /categories:
-    get:
-      description: List categories
-      tags: ["Categories"]
-      security: []
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/Category"
-
-    post:
-      description: Add category
-      tags: ["Categories"]
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Category"
-        required: true
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Category"
-
-  /categories/{id}:
-    parameters:
-      - name: id
-        in: path
-        description: ID of the category
-        required: true
-        schema:
-          type: string
-          format: uuid
-
-    get:
-      description: Get category details
-      tags: ["Categories"]
-      security: []
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Category"
-
-    put:
-      description: Update category
-      tags: ["Categories"]
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Category"
-        required: true
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Category"
-
-    delete:
-      description: Delete category
-      tags: ["Categories"]
       responses:
         "200":
           description: OK
