# src/models/mod.rs
@@ -1,5 +1,6 @@
 mod category;
+mod config;
 mod manufacturer;
 mod product;
 
-pub use self::{category::*, manufacturer::*, product::*};
+pub use self::{category::*, config::*, manufacturer::*, product::*};
